[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Serialisable SocketAddri that is IpAddr friendly (use ip crate until it's back in std, hopefully)"
documentation = "http://maidsafe.net/crust/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "crust"
readme = "README.md"
repository = "https://github.com/maidsafe/socket_addr"
version = "0.0.1"

[dependencies]
ip = "~1.1.0"
rustc-serialize = "~0.3.16"
