[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Serialisable SocketAddri that is IpAddr friendly (use ip crate until it's back in std, hopefully)"
documentation = "http://maidsafe.net/socket_addr/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "socket_addr"
readme = "README.md"
repository = "https://github.com/maidsafe/socket_addr"
version = "0.0.1"

[dependencies]
clippy = {version = "~0.0.37", optional = true}
ip = "~1.1.0"
rustc-serialize = "~0.3.16"
